General - Video Second Column spacing fix

--- a/University/Admin assets/CSS/build-uhi-main-2.css
+++ b/University/Admin assets/CSS/build-uhi-main-2.css
@@ -1655,6 +1655,12 @@ Adjusting for smaller screens 9
     }
 }
 
+/* One-Web General - Video Second Column */
+
+.content-type--one-web-general-video-second-column {
+  margin: 0 0 1rem 0;
+}
+
 /* OVERRIDE STYLES */
 
 .main .navigation--breadcrumb ol li a {
